# arduinoMoter

./: Arduino  CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h  moter.c
