cmake_minimum_required(VERSION 2.8.4)
project(Arduino)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
include_directories(/home/wang/opt/Qt5.3.2/5.3/gcc_64/include/QtGui)
include_directories(/home/wang/opt/Qt5.3.2/5.3/gcc_64/include/QtCore)
include_directories(/home/wang/opt/Qt5.3.2/5.3/gcc_64/include/QtWidgets)
include_directories(/home/wang/opt/Qt5.3.2/5.3/gcc_64/include/QtSerialPort)

find_package(Qt5Widgets)
find_package(Qt5Gui)
find_package(Qt5Core)
find_package(Qt5SerialPort)

set(SOURCE_FILES main.cpp mainWindow.cpp)
add_executable(Arduino ${SOURCE_FILES})
target_link_libraries(Arduino Qt5::Widgets)
target_link_libraries(Arduino Qt5::Gui)
target_link_libraries(Arduino Qt5::Core)
target_link_libraries(Arduino Qt5::SerialPort)
